--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   numberpicker: ^1.1.0
@@ -15,6 +15,7 @@ dependencies:
   material_design_icons_flutter: ^3.2.4096
   audioplayers:
   get_it: ^3.1.0
+  flushbar: ^1.9.1
 
   flutter:
     sdk: flutter
