--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
-  intl: ^0.16.0
+  lint: ^1.1.1
+  intl: ^0.16.1
   flutter_test:
     sdk: flutter
 
@@ -40,9 +41,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
