--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,12 @@ environment:
   sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
+  hive: ^1.3.0
+  hive_flutter: ^0.3.0+1
+  provider: ^4.0.2
   numberpicker: ^1.1.0
   path_provider: ^1.5.1
   sembast: ^2.1.2+3
-  provider: ^4.0.1
   flutter_slidable: ^0.5.4
   material_design_icons_flutter: ^3.2.4096
   audioplayers:
@@ -23,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  hive_generator: ^0.7.0
+  build_runner: ^1.7.3
   lint: ^1.1.1
   intl: ^0.16.1
   flutter_test:
