--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,16 +7,14 @@ environment:
   sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
-  hive: ^1.3.0
-  hive_flutter: ^0.3.0+1
-  provider: ^4.0.2
-  numberpicker: ^1.1.0
-  path_provider: ^1.5.1
-  sembast: ^2.1.2+3
+  hive: ^1.4.1+1
+  hive_flutter: ^0.3.0+2
+  provider: ^4.0.4
+  numberpicker: ^1.2.0
   flutter_slidable: ^0.5.4
   material_design_icons_flutter: ^3.2.4096
   audioplayers:
-  get_it: ^3.1.0
+  get_it: 4.0.0
   flushbar: ^1.9.1
 
   flutter:
