--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  mockito: ^4.1.1
   hive_generator: ^0.7.0
   build_runner: ^1.7.3
   lint: ^1.1.1
