--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,5 @@
 name: habitize3
+# name: habitize3_test 
 description: A new Flutter project.
 
 version: 1.0.0+1
@@ -8,7 +9,7 @@ environment:
 
 dependencies:
   hive: ^1.4.1+1
-  hive_flutter: ^0.3.0+2
+  hive_flutter: ^0.3.0+2 
   provider: ^4.0.4
   numberpicker: ^1.2.0
   flutter_slidable: ^0.5.4
@@ -23,6 +24,8 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  logging: ^0.11.4
+  logger: ^0.8.3 
   mockito: ^4.1.1
   hive_generator: ^0.7.0+2
   build_runner: ^1.8.0
