--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=tPN8@Z0T2
 keyPassword=tPN8@Z0T2
 keyAlias=key
-storeFile=L:\important\habitize_keystore.jks
+storeFile=habitize_keystore.jks
