--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@
 .pub-cache/
 .pub/
 /build/
+android/key.properties
+android/app/habitize_keystore.jks
 
 # Web related
 lib/generated_plugin_registrant.dart
