--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: habitize3
+name: Streak
 # name: habitize3_test
 description: A new Flutter project.
 
@@ -7,7 +7,7 @@ version: 0.1.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
-dependencies: 
+dependencies:
   uic: ^0.3.3
   floating_search_bar: ^0.3.0
   unsplash_client:
@@ -15,31 +15,31 @@ dependencies:
       url: https://github.com/saif97/unsplash_client
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
-  provider: ^4.0.4
+  provider: ^4.0.5+1
   numberpicker: ^1.2.0
   flutter_slidable: ^0.5.4
-  material_design_icons_flutter: ^3.2.4096
+  material_design_icons_flutter: ^4.0.5145
   audioplayers:
-  get_it: 4.0.0
+  get_it: 4.0.2
   cached_network_image: ^2.1.0+1
   #  flushbar: ^1.9.1
 
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
 
 dev_dependencies:
   colorize_lumberdash: ^2.1.0
   lumberdash: ^2.1.1
   mockito: ^4.1.1
   hive_generator: ^0.7.0+2
-  build_runner: ^1.8.0
+  build_runner: ^1.9.0
   lint: ^1.1.1
   intl: ^0.16.1
-  flutter_test:
-    sdk: flutter
-  flutter_launcher_icons: ^0.7.4
+  # flutter_test:
+    # sdk: flutter
+  flutter_launcher_icons: ^0.7.5
 
 flutter_icons:
   android: true
