--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,17 +25,23 @@ dependencies:
   #  flushbar: ^1.9.1
   dartz: ^0.9.1
   kt_dart: ^0.7.0+1
-
+  json_annotation: ^3.0.1
+  freezed_annotation: ^0.7.1
+  google_sign_in: ^4.5.1
+  cloud_firestore: ^0.13.6
+  firebase_auth: ^0.16.1
   flutter:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
+  freezed: ^0.10.9
   colorize_lumberdash: ^2.1.0
   lumberdash: ^2.1.1
   mockito: ^4.1.1
   hive_generator: ^0.7.0+2
+  json_serializable: ^3.3.0
   build_runner: ^1.9.0
   lint: ^1.1.1
   intl: ^0.16.1
