--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,32 @@
 {
     "dart.flutterSdkPath": "/Users/saif/dev/sdks/flutter_stable",
     "files.exclude": {
+        "**/.git": false,
+        "**/.svn": false,
+        "**/.hg": false,
+        "**/CVS": false,
+        "**/.DS_Store": false,
+        "**/*.freezed.dart": false,
+        "**/*.g.dart": false,
+        ".dart_tool": false,
+        ".history": false,
+        ".idea": false,
+        ".vscode": false,
+        ".*": false,
+        "pubspec.lock": false,
+        "*.log": false,
+        "*.iml": false,
+        "android": false,
+        "ios": false,
+        "gen": false,
+        "build": false,
+        "analysis_options.yaml": false,
+        "**/.classpath": false,
+        "**/.project": false,
+        "**/.settings": false,
+        "**/.factorypath": false
+    },
+    "explorerExclude.backup": {
         "**/.git": true,
         "**/.svn": true,
         "**/.hg": true,
@@ -25,6 +51,5 @@
         "**/.project": true,
         "**/.settings": true,
         "**/.factorypath": true
-    },
-    "explorerExclude.backup": null
+    }
 }
