--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,42 +5,42 @@ description: A new Flutter project.
 version: 0.1.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  ffi: ^1.0.0
-  uic: ^0.3.3
+  ffi: ^1.1.2
+
+  another_flushbar: ^1.10.24
+  flutter_progress_hud: ^2.0.0
   floating_search_bar: ^0.3.0
-  unsplash_client:
-    git:
-      url: https://github.com/saif97/unsplash_client
-  hive: ^1.4.4
-  hive_flutter: ^0.3.0+2
-  provider: ^4.0.5+1
-  numberpicker: ^1.2.0
-  flutter_slidable: ^0.6.0
-  material_design_icons_flutter: ^4.0.5145
-  audioplayers: ^0.17.4
-  get_it: ^4.0.2
-  cached_network_image: ^2.1.0+1
+  package_info_plus: ^1.3.0
+  unsplash_client: ^2.1.0
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  provider: ^6.0.1
+  numberpicker: ^2.1.1
+  flutter_slidable: ^1.1.0
+  material_design_icons_flutter: ^5.0.6295
+  audioplayers: ^0.20.1
+  get_it: ^7.2.0
+  cached_network_image: ^3.1.0+1
   #  flushbar: ^1.9.1
 
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.4
 
 dev_dependencies:
-  colorize_lumberdash: ^2.1.0
-  lumberdash: ^2.1.1
-  mockito: ^4.1.1
-  hive_generator: ^0.7.0+2
-  build_runner: ^1.9.0
-  lint: ^1.1.1
-  intl: ^0.16.1
+  mockito: ^5.0.16
+  hive_generator: ^1.1.1
+  build_runner: ^2.1.5
+  lint: ^1.7.2
+  intl: ^0.17.0
+  logger: ^1.1.0
   # flutter_test:
   # sdk: flutter
-  flutter_launcher_icons: ^0.7.5
+  flutter_launcher_icons: ^0.9.2
 
 flutter_icons:
   android: true
@@ -60,4 +60,3 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/test_images/
